--- a/www/sites/all/modules/contrib/coffee/coffee.css
+++ b/www/sites/all/modules/contrib/coffee/coffee.css
@@ -1,3 +1,8 @@
+/**
+ * @file
+ * Stylesheet for the Coffee module.
+ */
+
 #coffee-bg {
   position: fixed;
   left: 0;
@@ -35,7 +40,7 @@
 }
 
 #coffee-q {
-  background: #ddd;
+  background: #d1d1d1;
   color: #000;
   border: 0;
   font: 36px sans-serif;
@@ -65,10 +70,9 @@
   padding: 3px 10px;
 }
 
-#coffee-results a:hover,
 #coffee-results a:focus,
 #coffee-results a.focus {
-  background: #ddd;
+  background: #d1d1d1;
   color: #000;
 }
 
@@ -76,4 +80,9 @@
   display: block;
   font-size: 11px;
   color: #888;
+}
+
+#coffee-results a:focus .description,
+#coffee-results a.focus .description {
+  color: #666;
 }
