some CSS changes and environment_indicator module

--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1,1 +1,17 @@
 /* This file will hold the main styles for your website. */
+
+
+
+
+footer {
+	background:#242424;
+	color:#acacac;
+}
+
+footer h1, footer h2, footer h3, footer h4, footer h5, footer h6 {
+	color:#f1f1f1;
+}
+
+#region-footer-first {
+	background-image:url(/sites/all/themes/lynchburg/images/bg-footer-first.jpg) repeat-x left;
+}
