--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default-normal.css
@@ -1,1 +1,25 @@
 /* This file will hold styles that are loaded using the same media query as the normal grid. */
+
+
+
+/*****************/
+/* footer region */
+/*****************/
+
+footer {
+	background-image: url("/sites/all/themes/lynchburg/images/bg-footer-first.jpg") repeat-x top left;
+	color:#acacac;
+}
+
+footer h1, footer h2, footer h3, footer h4, footer h5, footer h6 {
+	color:#f1f1f1;
+}
+
+#region-footer-first, #region-footer-first div.content {
+	background:transparent;
+	height:60px;
+}
+
+#region-footer-second {
+	clear:both;
+}
