--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -1,1 +1,52 @@
 /* This file will hold styles that are loaded using the same media query as the narrow grid. */
+
+
+/*****************/
+/* header region */
+/*****************/
+
+header#section-header {
+	margin:0;
+	padding:0;
+	border:0;
+	background: transparent url("/sites/all/themes/lynchburg/images/bg-header-arch.jpg") no-repeat top center;
+}
+
+
+/********** this should be unnecessary when we are done. ********/
+div.region-user-first-inner {
+	display:none;
+}
+
+div#region-user-second {
+	height:30px;
+}
+
+div#region-menu {
+	border:solid 2px #ff0;
+	position:relative;
+	top:45px;
+	
+}
+
+/*****************/
+/* footer region */
+/*****************/
+
+footer {
+	background-image: url("/sites/all/themes/lynchburg/images/bg-footer-first.jpg") repeat-x top left;
+	color:#acacac;
+}
+
+footer h1, footer h2, footer h3, footer h4, footer h5, footer h6 {
+	color:#f1f1f1;
+}
+
+#region-footer-first, #region-footer-first div.content {
+	background:transparent;
+	height:60px;
+}
+
+#region-footer-second {
+	clear:both;
+}
