--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -21,3 +21,15 @@ h1, h2, h3, h4, h5, h6 {
 footer {
 	background:#242424;
 }
+
+
+footer h1, footer h2, footer h3, footer h4, footer h5, footer h6 {
+	color:#f1f1f1;
+}
+
+footer h2 {
+	border-bottom:solid 1px #5b5b5b;
+	font-family:arial, sans-serif;
+	font-size:16px;
+	font-weight:normal;
+}
