--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -17,6 +17,9 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
+/*************************
+ *  footer area          *
+ *************************/
 
 footer#section-footer {
 	background: #202022;
