--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1,35 +1,840 @@
 /* This file will hold the main styles for your website. */
+@font-face {
+	font-family: Arimo;
+	src: url("/sites/all/themes/lynchburg/fonts/Arimo.ttf");
+}
 
 
+
+/* ========== GENERAL STYLES ========== */
 body {
-	background: #fff url("/sites/all/themes/lynchburg/images/bg-body-top.jpg") repeat-x top left;
-	color:#000;
-/*	margin:0;
-	padding:0;
-*/
+	font-family:Arimo, Arial, Helvetica, sans-serif;
+	color:#6b6b6b;
+	font-size:12px;
+	line-height:1.5em;
+	background: #f9f9f9 url("/sites/all/themes/lynchburg/images/bg-body-top.jpg") repeat-x top left;
 }
 
+
+
+/* ========== SECONDARY NAV STYLES ========== */
+.region-inner region-sidebar-first-inner{
+	border-top: #666 dotted 1px;
+	border-bottom: #666 dotted 1px;
+}
+
+
+
+
+/* ========== LIST STYLES ========== */
+ol, ul {
+	list-style: none;
+	margin:0 0 1.5em;
+	padding: 0;
+}
+ul li, ol li {
+	margin:0;
+	padding:0.75em 0;
+}
+ul li a, ol li a {
+	text-decoration:none;
+}
+
+/* ========== ORDERED LISTS ========== */
+ol.ordered {
+	padding-left: 2.1em;
+}
+ol.type-1 {
+	list-style: decimal-leading-zero;
+}
+ol.type-2 {
+	list-style: decimal;
+}
+
+/* ========== UNORDERED LISTS ========== */
+ul.unordered li {
+	padding-left: 2.1em;
+	background-position: 0 0.75em;
+	background-repeat: no-repeat;
+}
+ul.unordered.type-1 li {
+	background-image: url("/sites/all/themes/lynchburg/images/tick.png");
+}
+ul.unordered.type-2 li {
+	background-image: url("/sites/all/themes/lynchburg/images/arrow_state_blue_right.png");
+}
+ul.unordered.type-3 li {
+	background-image: url("/sites/all/themes/lynchburg/images/media_controls_forward_small.png");
+}
+ul.unordered.type-4 li {
+	background-image: none;
+	padding-left: 0;
+}
+
+/* tables still need 'cellspacing="0"' in the markup */
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* ========== PARAGRAPH STYLES ========== */
+p {
+	margin:0 0 1.5em 0;
+	padding: 0;
+}
+strong {
+	color:#565656;
+}
+
+/* ========== TEXT SELECTION STYLES ========== */
+::-moz-selection {
+color: #fff;
+background-color: #115482;
+}
+::selection {
+	color: #fff;
+	background-color: #115482;
+}
+
+/* ========== BREADCRUMB STYLES ========== */
+
+#breadcrumb {
+	width:918px;
+	padding:5px 30px 19px 30px;
+	margin:13px 0 0 0;
+	color:#232323;
+	font-size:13px;
+	text-shadow:#f1f1f1 1px 1px 0;
+} 
+
+#breadcrum a {
+	color:#115482;
+} 
+
+#breadcrumb a:hover {
+	color:#242424;
+} 
+
+/* ========== LINK STYLES ========== */
+a {
+	text-decoration:none;
+	color: #115482;
+}
+
+a:hover {
+	color:#a1a1a1 !important;
+}
+a, a:link, a:visited, a:focus {
+	text-decoration:none;
+	outline:none;
+}
+
+
+/* ========== HEADING STYLES ========== */
 h1, h2, h3, h4, h5, h6 {
-	background:transparent;
+	font-family:Arimo, Arial, Verdana, sans-serif;
+	font-weight:normal;
+	color:#242424;
+}
+h1 {
+	font-size:30px;
+	letter-spacing:.5px;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	color:#900900;
+}
+h2 {
+	font-size:24px;
+	margin-bottom: 0.5em;
+	letter-spacing:.5px;
+}
+h3 {
+	font-size:20px;
+	margin-bottom:0.4em;
+	letter-spacing:.5px;
+}
+h4 {
+	font-size:17px;
+	margin-bottom:0.3em;
+	letter-spacing:.5px;
+	/*color:#900900;*/
+}
+h5 {
+	font-size:14px;
+	margin-bottom:0.2em;
+	letter-spacing:.5px;
+}
+h6	{
+	font-size:14px;
+	color:#858585;
+	margin-top:0.5em;
+	margin-bottom:0.2em;
+}
 
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+	text-decoration:none;
+}
+
+/* ========== BLOCKQUOTES ========== */
+blockquote {
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: 16px;
+	border-left:4px solid #115482;
+	font-style: italic;
+	color: #303030;
+	line-height: 1.5em;
+	margin-bottom:1em;
+	padding:0 0 0 1em;
 }
 
 
+/* ========== QUOTES ========== */
+
+.quoteBox-big {
+	padding:0;
+	margin-bottom:-25px;}
+
+.quote-author {
+	margin-top:10px;
+	text-align:right;
+	font-style:italic;
+	font-size:12px;
+	color:#ff7706;
+}
+
+.quote-text {
+	font-family:Georgia, "Times New Roman", Times, serif;
+	color:#303030;
+	font-style:italic;
+	font-size:16px;
+	font-weight:normal;
+	line-height:1.4em;
+}
+
+/* ========== BIO STYLES ========== */
+#bio {
+	background:url("/sites/all/themes/lynchburg/images/bg_bio.png") repeat-x left top #f0f0f0;
+	min-height:120px;
+	margin-top:3.4em;
+	padding:14px 20px;
+	border:1px solid #d4d4d4;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+	-moz-box-shadow: 1px 2px 3px rgba(228,228,228,0.8);
+	-webkit-box-shadow: 1px 2px 3px rgba(228,228,228,0.8);
+	box-shadow: 1px 2px 3px rgba(228,228,228,0.8);
+	position:relative;
+	behavior: url(js/PIE.htc);
+}
+.bio_info {
+	overflow:hidden;
+	display:table;
+}
+#bio h5 {
+	text-shadow:#fafafa 1px 1px 0;
+	margin-bottom:1em;
+	color:#858585;
+}
+
+/* ========== CONTENT ========== */
+.content_wrapper, .content_wrapper_sbr, .content_wrapper_sbl, .content_wrapper_sbb {
+	margin: 0 auto;
+	min-height: 300px;
+	padding: 30px 0 50px;
+	width: 960px;
+	/*outline:#000 solid 1px;*/
+}
+.content_wrapper_sbb {
+	background:url(../images/vertical_rig_both.png) repeat-y;
+}
+.content_wrapper_sbr {
+	background:url(../images/vertical_rig_right.png) repeat-y;
+}
+.content_wrapper_sbl {
+	background:url(../images/vertical_rig_left.png) repeat-y;
+}
+.content_wrapper #content {
+	width:960px;/*outline:#FF0 solid 1px;*/
+}
+.content_wrapper_sbr #content, .content_wrapper_sbl #content {
+	width: 620px;
+	padding-top:1em;/*	outline:#0F0 solid 1px;*/
+}
+.content_wrapper_sbb #content, {
+ width: 520px;
+ padding-top:1em;
+/*	outline:#0F0 solid 1px;*/
+}
+.content_wrapper_sbr #content {
+	float: left;
+}
+.content_wrapper_sbl #content {
+	float: right;
+}
+.content_wrapper_gallery {
+	margin: 0 auto;
+	min-height: 300px;
+	padding: 0 0 50px;
+	width: 978px;
+	background:#f9f9f9;
+	-moz-border-radius:0 0 5px 5px;
+	-webkit-border-radius:0 0 5px 5px;
+	border-radius:0 0 5px 5px;
+}
 
 
+/* ========== IMAGE & BORDERS ========== */
+.image, .imageTopLeft, .imageTopRight, .imageLeft, .imageRight, .imageCenter{
+	padding:3px;
+	background:#fff;
+	-moz-box-shadow: 1px 2px 3px rgba(230, 230, 230, 0.8),-1px -1px 3px rgba(230, 230, 230, 0.8);
+	-webkit-box-shadow: 1px 2px 3px rgba(230, 230, 230, 0.8),-1px -1px 3px rgba(230, 230, 230, 0.8);
+	box-shadow: 1px 2px 3px rgba(230, 230, 230, 0.8),-1px -1px 3px rgba(230, 230, 230, 0.8);
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+	position:relative;
+	behavior: url(js/PIE.htc);	
+}
+.image:hover, .imageTopLeft:hover, .imageTopRight:hover, .imageLeft:hover, .imageRight:hover, .imageCenter:hover{
+	background:#666666;
+	-moz-transition: all 0.2s linear 0s;
+	-webkit-transition: all 0.2s linear 0s;
+	-o-transition: all 0.2s linear 0s;
+}
+.imageTopLeft{
+	float:left;
+	margin:4px 20px 10px 0;
+}
+.imageTopRight{
+	float:right;
+	margin:4px 0 10px 20px;
+}
+.imageLeft{
+	float:left;
+	margin:20px 20px 20px 0;
+}
+.imageRight{
+	float:right;
+	margin:20px 0 20px 20px;
+}
+.imageCenter{
+	display: block;
+	margin: 20px auto 20px;
+}
+
+
+/* ========== IMAGE CAPTION STYLES ========== */
+.caption {
+	clear:both;
+	padding-top:.5em;
+	padding-bottom:1.5em;
+	/*margin-top:1.5em;*/
+	margin-bottom:2.5em;
+	color:#393939;
+	border-top:#c3c3c3  dotted 2px;
+	border-bottom:#c3c3c3  dotted 2px;
+}
+.caption .caption-date,
+.caption .caption-author,
+.caption .caption-tags {
+	font-size:11px;
+	float:left;
+	font-style:italic;
+}
+.caption .caption-date a:hover,
+.caption .caption-author a:hover,
+.caption .caption-tags a:hover {
+	color:#a1a1a1;
+} 
+
+.caption .caption-author {
+	margin:0 16px;	
+}
+
+.caption-title {
+	margin-top:30px;
+	position:relative;
+} 
+
+.caption_text .caption-title {
+	margin-top:5px;
+} 
+
+.caption-title h2 {
+	margin-bottom:0.75em;
+} 
+
+.caption .caption-title h2 a:hover, .caption .caption-title h3 a:hover {
+	color:#A1A1A1;
+}
+
+/* ========== FLOATING & ALIGNMENT ========== */
+.alignleft {
+	float: left;
+	margin-right:1.5em;
+}
+
+.alignleft20 {
+	float:left;
+	margin-right:20px;
+}
+.alignright {
+	float: right;
+	margin-left:1.5em;
+}
+
+.topmargin {
+	margin-top:10px;
+}
+
+.aligncenter, div.aligncenter {
+	display: block;
+	margin-left: auto;
+	margin-right: auto
+}
+.quoteright {
+	float: right;
+	margin: 0 0 10px 30px;
+	width: 240px;
+}
+.quoteleft {
+	float: left;
+	margin: 0 30px 10px 0;
+	width: 240px;
+}
+.quoteleft p, .quoteright p {
+	margin:0;
+}
+
+/* ----- Columns Styles ----- */	
+	
+.columns, .columns2, .columns3, .columns4, .columns5, .columns6, .columns7, .columns8, .columns9, .columns10, .columns11, .columns12, .columns13, .columns14, .columns15, .columns16 {
+	width:auto;
+	margin-bottom:2em;
+}
+.column {
+	width:auto;
+	float:left;
+	position:relative;
+}
+/* ========== DROPCAPS ========== */
+.dropcap {
+	color: #5e5e5e;
+	float: left;
+	font-size: 40px;
+	line-height: 1em;
+	margin: 0 10px 0 0;
+	padding: 3px 0;
+}
+.dropcap2 {
+	background: url("/sites/all/themes/lynchburg/images/dropcapspot_2.png") no-repeat scroll 50% 50% transparent;
+	color: #f0f0f0;
+	float: left;
+	text-shadow: none;
+	font-size: 45px;
+	line-height: 1em;
+	margin: 0 10px 0 0;
+	padding: 10px 15px;
+	text-align: center;
+}
+.dropcap3 {
+	background: url("/sites/all/themes/lynchburg/images/dropcap3.png") no-repeat scroll 50% 50% transparent;
+	color: #bfbfbf;
+	float: left;
+	clear:both;
+	font-size: 50px;
+	line-height: 1em;
+	margin: 0 10px 0 0;
+	padding: 8px 15px 7px;
+	text-align: center;
+}
+.dropcapspot, .dropcapspot2 {
+	background: url("/sites/all/themes/lynchburg/images/dropcapspot_2.png") no-repeat scroll left center transparent;
+	color: #FFFEFE;
+	display: block;
+	float: left;
+	font-size: 24px;
+	height: 62px;
+	line-height: 62px;
+	padding-right: 8px;
+	position: relative;
+	text-align: center;
+	text-shadow: -1px 0 0 #1E1E1E;
+	top: 6px;
+	width: 62px;
+}
+.dropcapspot2 {
+	top:-6px;
+}
+.dropcapspot3 {
+	background: url("/sites/all/themes/lynchburg/images/dropcapspot3.png") no-repeat scroll left center transparent;
+	color: #FFFEFE;
+	display: block;
+	float: left;
+	font-size: 18px;
+	height: 40px;
+	line-height: 38px;
+	margin-top:5px;
+	margin-right: 10px;
+	position: relative;
+	text-align: center;
+	text-shadow: -1px 0 0 #1E1E1E;
+	top: 0;
+	width: 40px;
+}
+
+/* ========== DIVIDERS ========== */
+.divider_content {
+	background:url("/sites/all/themes/lynchburg/images/divider_content.png") no-repeat center;
+	height:4px;
+	width:100%;
+	margin:30px 0 45px;
+}
+.divider_top {
+	background: url("/sites/all/themes/lynchburg/images/square_divider.png") repeat-x scroll center center transparent;
+	clear: both;
+	position:relative;
+	display: block;
+	font-size:10px;
+	padding: 20px 0;
+	width: 100%;
+}
+.divider_top a {
+	border: 0 none;
+	cursor: pointer;
+	height: 20px;
+	font-family: Arial, Verdana, sans-serif;
+	outline: medium none;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+.divider_bottom {
+	background:url("/sites/all/themes/lynchburg/images/bottom_line.png") no-repeat bottom center;
+	width:100%;
+	height:4px;
+}
+.divider_line {
+	background:url("/sites/all/themes/lynchburg/images/bottom_line.png") no-repeat center center;
+	width:100%;
+	margin:60px 0 50px;
+	height:4px;
+	clear:both;
+	display: block;
+}
+.divider_padding {
+	padding-bottom: 60px;
+}
+.divider_padding {
+	clear: both;
+	display: block;
+	font-size: 0;
+	height: 0;
+	line-height: 0;
+	width: 100%;
+}
+
+/* ========== SIDEBARS ========== */
+.content_wrapper_sbr #sidebar {
+	float: right;
+	/*outline:#FF0 solid 1px;*/
+}
+.content_wrapper_sbl #sidebar {
+	float: left;
+	/*outline:#FF0 solid 1px;*/
+}
+#sidebar {
+	min-height: 550px;
+	position: relative;
+	width: 220px;
+	padding:1em 0 0 0;
+}
+
+/* ========== Nav ========== */
+.content_wrapper_sbr #sidebar {
+	float: right;
+	/*outline:#FF0 solid 1px;*/
+}
+.content_wrapper_sbl #sidebar {
+	float: left;
+	/*outline:#FF0 solid 1px;*/
+}
+#sidebar {
+	min-height: 550px;
+	position: relative;
+	width: 220px;
+	padding:1em 0 0 0;
+}
+
+/* ========== FEATURE TABLES ========== */
+.feature_table {
+	background:#fff;
+	margin:0 0 20px 0;
+	width:100%;
+	position:relative;
+	border:1px solid #e8e8e8;
+	-moz-border-radius:8px;
+	-webkit-border-radius:8px;
+	border-radius:8px;
+	border-collapse:inherit;
+	-moz-box-shadow:0 1px 3px #e4e4e4;
+	-webkit-box-shadow:0 1px 3px #e4e4e4;
+	box-shadow:0 1px 3px #e4e4e4;
+}
+table.feature_table thead tr {
+	-moz-border-radius:8px;
+	-webkit-border-radius:8px;
+	border-radius:8px;
+	-moz-box-shadow:0 1px 3px #e4e4e4;
+	-webkit-box-shadow:0 1px 3px #e4e4e4;
+	box-shadow:0 1px 3px #e4e4e4;
+}
+table.feature_table thead tr th {
+	background:url("/sites/all/themes/lynchburg/images/sprite_table.png") repeat-x #fff;
+	border-right:1px solid #e7e7e7;
+}
+table.feature_table thead tr th.left_round {
+	-moz-border-radius:8px 0 0 8px;
+	-webkit-border-radius:8px 0 0 8px;
+	border-radius:8px 0 0 8px;
+}
+table.feature_table thead tr th.right_round {
+	-moz-border-radius:0 8px 8px 0;
+	-webkit-border-radius:0 8px 8px 0;
+	border-radius:0 8px 8px 0;
+}
+.feature_table thead tr th {
+	font-family:Arial, Verdana;
+	padding:14px 20px 12px 20px;
+	font-size:16px;
+	position:relative;
+	font-weight:100;
+	text-align:left;
+	text-shadow:1px 1px #f8f8f8;
+	color:#6b6b6b;
+	margin:0;
+}
+table.feature_table tbody td {
+	margin:0;
+	padding:10px 20px;
+	font-size:12px;
+	color:#6b6b6b;
+	border-top:1px solid #f0f0f0;
+	border-right:1px solid #f0f0f0;
+}
+table.feature_table tbody tr:first-child td {
+	border-top:none;
+}
+table.feature_table tbody tr td.noborder {
+	border-right:none;
+}
+table.feature_table tbody tr:hover {
+	background-color:#dcdcdc;
+	-moz-transition: all 0.2s linear 0s;
+	-webkit-transition: all 0.2s linear 0s;
+	-o-transition: all 0.2s linear 0s;
+} 
+
+/* --- Table Grey --- */
+table.feature_table.table_grey thead th {
+	background-position: 0 0;
+	border-right:1px solid #e7e7e7;
+}
+table.feature_table.table_grey thead tr th.left_round {
+	border-left:1px solid #f6f6f6;
+}
+table.feature_table.table_grey thead tr th.right_round {
+	border-right:1px solid #f6f6f6;
+}
+/* --- Table Dark --- */
+table.feature_table.table_dark thead th {
+	background-position: 0 -45px;
+	font-size:16px;
+	border-right:1px solid #595a5a;
+	text-shadow:0 -1px #2a2b2b;
+	color:#fff;
+}
+table.feature_table.table_dark thead tr th.left_round {
+	border-left:1px solid #2b2c2c;
+}
+table.feature_table.table_dark thead tr th.right_round {
+	border-right:1px solid #2b2c2c;
+}
+/* --- Table blue --- */
+table.feature_table.table_blue thead th {
+	background-position: 0 -181px;
+	font-size:16px;
+	border-right:1px solid #1369a4;
+	text-shadow:1px 1px #104468;
+	color:#fff;
+}
+table.feature_table.table_blue thead tr th.left_round {
+	border-left:1px solid #1369a4;
+}
+table.feature_table.table_blue thead tr th.right_round {
+	border-right:1px solid #1369a4;
+}
+/* --- Table Red --- */ 
+table.feature_table.table_red thead th {
+	background-position: 0 -226px;
+	font-size:16px;
+	border-right:1px solid #6d0903;
+	text-shadow:1px 1px #484848;
+	color:#fff;
+}
+table.feature_table.table_red thead tr th.left_round {
+	border-left:1px solid #490101;
+}
+table.feature_table.table_red thead tr th.right_round {
+	border-right:1px solid #490101;
+}
+
+/* ========== EMPHASIS BOX STYLES ========== */
+.emphasis_box {
+	clear:both;
+	padding-top:1.5em;
+	padding-bottom:-1.5em;
+	margin-top:3.5em;
+	margin-bottom:3.5em;
+	color:#393939;
+	border-top:#c3c3c3  dotted 2px;
+	border-bottom:#c3c3c3  dotted 2px;
+}
+
+.emphasis_box .emphasis-date,
+.emphasis_box .emphasis-author,
+.emphasis_box .emphasis-tags {
+	font-size:11px;
+	float:left;
+	font-style:italic;
+}
+.emphasis_box .emphasis-date a:hover,
+.emphasis_box .emphasis-author a:hover,
+.emphasis_box .emphasis-tags a:hover {
+	color:#a1a1a1;
+} 
+
+.emphasis_box .emphasis-author {
+	margin:0 16px;	
+}
+
+.emphasis-title {
+	margin-top:30px;
+	position:relative;
+} 
+
+.emphasis_text .emphasis-title {
+	margin-top:5px;
+} 
+
+.emphasis-title h2 {
+	margin-bottom:0.75em;
+} 
+
+.emphasis-box .emphasis-title h2 a:hover, .emphasis-box .emphasis-title h3 a:hover {
+	color:#A1A1A1;
+}
+
+/* ----- Default Form Elements ----- */
+
+input, select, textarea {
+	font-size:12px;
+	font-family:Arial, Helvetica, sans-serif;
+	color:#6b6b6b;
+	font-weight:normal;
+	border:1px solid #d7d7d7;
+	background:#f9f9f9;
+	padding:5px 10px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+	-moz-box-shadow:1px 1px 0 rgba(215,215,215,1) inset, 0 10px 15px rgba(255,255,255,1) inset;
+	-webkit-box-shadow:1px 1px 0 rgba(215,215,215,1) inset, 0 10px 15px rgba(255,255,255,1) inset;
+	box-shadow:1px 1px 0 rgba(215,215,215,1) inset, 0 10px 15px rgba(255,255,255,1) inset;
+	position:relative;
+	overflow:hidden;
+	behavior: url(js/PIE.htc);
+}
+input:hover, select:hover, textarea:hover {
+	-moz-box-shadow:0 2px 2px rgba(204,204,204,0.7) inset;
+	-webkit-box-shadow:0 2px 2px rgba(204,204,204,0.7) inset;
+	box-shadow:0 2px 2px rgba(204,204,204,0.7) inset;
+}
+input:focus, select:focus, textarea:focus {
+	background:#fff;
+	-moz-box-shadow:0 2px 4px rgba(204,204,204,0.8) inset;
+	-webkit-box-shadow:0 2px 4px rgba(204,204,204,0.8) inset;
+	-box-shadow:0 2px 4px rgba(204,204,204,0.8) inset;
+}
+select {
+	padding:1px;
+}
+
+/* ========== NOTIFICATIONS ========== */
+.info, .warnings, .errors, .success {
+	border:1px solid #d7d7d7;
+	font-size:12px;
+	margin-bottom:10px;
+	padding:20px 60px 20px 20px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+	min-height:60px;
+	background: url("/sites/all/themes/lynchburg/images/notifications.png") repeat-x scroll 0 0 #efeded;
+}
+
+.info:hover, .warnings:hover, .errors:hover, .success:hover {
+	background-position: 0 -150px;	
+} 
+
+.info img, .warnings img, .errors img, .success img {
+    float:left;
+	margin-right:20px;	
+} 
+
+.info p, .warnings p, .errosr p, .success p {
+	padding:0;
+	margin:0;
+	display:table;
+	overflow:hidden;
+} 
+
+.info {color:#3cb4e4;} 
+
+.warnings {color:#ff9c00;} 
+
+.errors {color:#f76565;} 
+
+.success {color:#75bc16;}
+
+
+.widget-container {
+	margin-bottom:3em;
+}
+
+#fsb .widget-container {
+	margin:0;
+} 
+
+.widget-container ul li h6 {
+	margin-bottom:0;
+	font-size:12px;		
+}
 /*************************
  *  footer area          *
  *************************/
 
 footer#section-footer {
-	background: #202022;
 	color:#acacac;
-	
+	background:#202022;
 }
 
 
 footer#section-footer h1, footer#section-footer h2, footer#section-footer h3, footer#section-footer h4, footer#section-footer h5, footer#section-footer h6 {
 	color:#f1f1f1;
+	/*border:#0F0 solid 1px;*/
 }
  
 footer#section-footer h2 {
@@ -37,12 +842,14 @@ footer#section-footer h2 {
 	font-family:arial, sans-serif;
 	font-size:16px;
 	font-weight:normal;
+	margin-top:20px;
 }
 
-footer#section-footer ul {
-	list-style-type:none;
+footer#section-footer ul li{
+	list-style:none;
+	/*border:#0F0 solid 1px;*/
 }
-
+	
 
 .grid12 {
 	width:960px;
