--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -11,131 +11,11 @@ body {
 	font-family:Arimo, Arial, Helvetica, sans-serif;
 	color:#6b6b6b;
 	/*padding:20px 30  20px 0px;*/
-	font-size:12px;
+	font-size:0.75em;
 	line-height:1.5em;
 	background: #f9f9f9 url("/sites/all/themes/lynchburg/images/bg-body-top.jpg") repeat-x top left;
 }
 
-/* ========== ASIDE ========== */
-.field-name-field-aside{
-	margin-left:20px;
-	padding:0px 0  20px 30px;
-	border-left: #e8e8e8 double 3px;
-	/*border:#0F0 solid 1px;*/
-}
-.field-name-field-aside ul {
-	/*border-top:#c3c3c3  dotted 1.75px;*/
-	background:url("/sites/all/themes/lynchburg/images/square_divider.png") repeat-x top;
-} 
-
-.field-name-field-aside li{
-	background:url("/sites/all/themes/lynchburg/images/square_divider.png") repeat-x bottom;
-	/*border-bottom:#c3c3c3  dotted 1.25px;*/
-	padding:0.74em 0 0.74em 2em;
-	position:relative;
-	list-style:none;
-} 
-.field-name-field-aside li:after,
-.field-name-field-aside li .after {
-	background-image:url("/sites/all/themes/lynchburg/images/circle_list.png");
-	background-repeat:no-repeat;
-	background-position:0 -30px;
-	position:absolute;
-	content:"";
-	after:"&nbsp;";
-	top:0.75em;
-	left:0;
-	list-style:none;
-	height:16px;
-	width:16px;
-} 
-.field-name-field-aside li .after {
-  	top:4px;	
-}
-
-.field-name-field-aside li:hover:after, .field-name-field-aside li .after:hover {
-	background-position:0 0;
-}
-
-
-
-.widget-container {
-	margin-bottom:3em;
-}
-.widget-container ul li h6 {
-	margin-bottom:0;
-	font-size:12px;		
-}
-
-/* ----- Widget Categories ----- */
-
-.widget_categories ul {
-	background:url(../images/square_divider.png) repeat-x top;
-} 
-
-.widget_categories li{
-	background:url(../images/square_divider.png) repeat-x bottom;
-	padding:0.74em 0 0.74em 2em;
-	position:relative;
-	list-style:none;
-} 
-
-.widget_categories li:after,
-.widget_categories li .after {
-	background-image:url(../images/circle_list.png);
-	background-repeat:no-repeat;
-	background-position:0 -30px;
-	position:absolute;
-	content:"";
-	after:"&nbsp;";
-	top:0.75em;
-	left:0;
-	list-style:none;
-	height:16px;
-	width:16px;
-} 
-
-.widget_categories li .after {
-  	top:4px;	
-}
-
-.widget_categories li:hover:after, .widget_categories li .after:hover {
-	background-position:0 0;
-}
-
-/* ----- Widget Archive ----- */
-
-.widget_archive ul {
-	background:url(../images/square_divider.png) repeat-x top;
-} 
-
-.widget_archive ul li {
-	background:url(../images/square_divider.png) repeat-x bottom;
-	padding:0.74em 0 0.74em 2em;
-	position:relative;;
-}
-
-.widget_archive li:after,
-.widget_archive .after {
-	background-image:url(../images/circle_list.png);
-	background-repeat:no-repeat;
-	background-position:0 -30px;
-	position:absolute;
-	content:"";
-	after:"&nbsp;";
-	top:0.75em;
-	left:0;
-	height:16px;
-	width:16px;
-}
-
-.widget_archive .after {
-	top:4px;
-} 
-
-.widget_archive li:hover:after {
-	background-position:0 0;
-}
 
 /* ========== LIST STYLES ========== */
 ol, ul {
@@ -207,33 +87,17 @@ background-color: #115482;
 	background-color: #115482;
 }
 
-/* ========== BREADCRUMB STYLES ========== */
-
-#breadcrumb {
-	width:918px;
-	padding:5px 30px 19px 30px;
-	margin:13px 0 0 0;
-	color:#232323;
-	font-size:13px;
-	text-shadow:#f1f1f1 1px 1px 0;
-} 
-
-#breadcrum a {
-	color:#115482;
-} 
-
-#breadcrumb a:hover {
-	color:#242424;
-} 
-
 /* ========== LINK STYLES ========== */
 a {
 	text-decoration:none;
 	color: #115482;
 }
-
+a:visited {
+	color:#5d4a6b;
+}
 a:hover {
 	color:#a1a1a1 !important;
+	text-decoration:underline;
 }
 a, a:link, a:visited, a:focus {
 	text-decoration:none;
@@ -243,53 +107,152 @@ a, a:link, a:visited, a:focus {
 
 /* ========== HEADING STYLES ========== */
 h1, h2, h3, h4, h5, h6 {
-	font-family:Arimo, Arial, Verdana, sans-serif;
+	font-family:'Arimo', Arial, Verdana, sans-serif;
 	font-weight:normal;
 	color:#242424;
+	margin-bottom:0.3em;
+	letter-spacing:.5px;
 }
 h1 {
-	font-size:30px;
-	letter-spacing:.5px;
+	font-size:2.5em; /*30px*/
 	margin-bottom: 1em;
 	line-height:32px;
 	color:#900900;
 }
-h2 {
-	font-size:24px;
-	margin-bottom: 0.5em;
-	letter-spacing:.5px;
-}
-h3 {
-	font-size:20px;
-	margin-bottom:0.4em;
-	letter-spacing:.5px;
-}
-h4 {
-	font-size:17px;
-	margin-bottom:0.3em;
-	letter-spacing:.5px;
-	/*color:#900900;*/
-}
-h5 {
-	font-size:14px;
-	margin-bottom:0.2em;
-	letter-spacing:.5px;
-}
-h6	{
-	font-size:14px;
-	color:#858585;
-	margin-top:0.5em;
-	margin-bottom:0.2em;
-}
+h2 {font-size:2em;line-height:26px;} /*24px*/
+h3 {font-size:1.667em;line-height:22px;} /*20px*/
+h4 {font-size:1.417em;line-height:19px;} /*17px*/
+h5 {font-size:1.25em;line-height:17px;} /*15px*/
+h6 {font-size:1.167em;color:#858585;line-height:14px;} /*14px*/
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	text-decoration:none;
 }
 
+
+/* ========== MAIN NAV ========== */
+.navigation, .navigation a, #main-menu {
+	font-family:'Arimo', Arial, Helvetica, sans-serif;
+	font-size:1.083em;
+	padding-top:8px;
+	color:#454545;
+}
+
+#megamenu-undergraduate, #megamenu-graduate,#megamenu-studentlife, #megamenu-alumni, #megamenu-athletics{padding:0px 30px 0 10px;}
+#megamenu-studentlife {padding-right:515px;}
+
+/* ========== MAIN NAV DROPDOWN ========== */
+.qtip{border:none;}
+
+.qtip-wrapper{
+	-moz-box-shadow: 3px 3px 8px #dddedf;
+	-webkit-box-shadow: 3px 3px 8px #dddedf;
+	box-shadow: 3px 3px 8px #dddedf;
+	/* For IE 8 */
+	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf')";
+	/* For IE 5.5 - 7 */
+	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf');
+	-moz-border-radius-bottomright:8px;
+	-webkit-border-bottom-right-radius:8px;
+	-moz-border-radius-bottomleft:8px;
+	-webkit-border-bottom-left-radius:8px;
+}
+.qtip-wrapper.qtip-contentWrapper{
+	border:none;
+}
+
+#mini-panel-undergraduate_megamenu, #mini-panel-graduate_megamenu, #mini-panel-student_life_megamenu, 
+#mini-panel-alumni_megamenu, #mini-panel-athletics_megamenu{
+	margin:20px;
+	line-height:14px;
+	font-size:1em;		
+}
+.menu-minipanels .pane-title, .pane-node-field-links .pane-title{
+	font-size:1.333em;
+	line-height:1em;
+	color:#900900;
+}
+#mini-panel-undergraduate_megamenu ul, #mini-panel-graduate_megamenu ul, #mini-panel-student_life_megamenu ul, #mini-panel-alumni_megamen ul, #mini-panel-athletics_megamen ul{
+	/*list-style:none;*/
+	/*line=height:1em;*/
+	margin:0;
+	padding:0;
+}
+#mini-panel-undergraduate_megamenu li, #mini-panel-graduate_megamenu li, #mini-panel-student_life_megamenu li, #mini-panel-alumni_megamen li, #mini-panel-athletics_megamen li{
+	list-style:none;
+	padding:10px 40px 0 0;
+}
+
+/* ========== ASIDE & SECONDARY NAV ========== */
+.field-name-field-aside{
+	margin-left:0px;
+	padding:0px 0 20px 30px;
+	border-left:#e8e8e8 double 3px;
+	/*border:#0F0 solid 1px;*/
+}
+.pane-ct-page-lc-section-nav {
+	margin:0px;
+	padding:0px 30px 20px 0px;
+	border-right:#e8e8e8 double 3px;
+	/*border:#00FF00 solid 1px;*/
+}
+.pane-ct-page-lc-section-nav h2.pane-title{
+	font-size:1.333em; /*16px*/
+	background:none;
+	line-height:.02em;
+	margin-bottom:1em;
+	color:#242424
+}
+
+.field-name-field-aside ul, .pane-ct-page-lc-section-nav .pane-content .item-list ul{
+	/*border-top:#c3c3c3  dotted 1.75px;*/
+	background:url("/sites/all/themes/lynchburg/images/square_divider.png") repeat-x top;
+} 
+
+.field-name-field-aside li, .pane-ct-page-lc-section-nav .pane-content .item-list li {
+	background:url("/sites/all/themes/lynchburg/images/square_divider.png") repeat-x bottom;
+	/*border-bottom:#c3c3c3  dotted 1.25px;*/
+	padding:0.74em 0 0.74em 2em;
+	position:relative;
+	list-style:none;
+	margin:0;
+} 
+.field-name-field-aside li:after,
+.field-name-field-aside li .after,
+.pane-ct-page-lc-section-nav .pane-content .item-list li:after,  
+.pane-ct-page-lc-section-nav .pane-content .item-list li .after{
+	background-image:url("/sites/all/themes/lynchburg/images/circle_list.png");
+	background-repeat:no-repeat;
+	background-position:0 -30px;
+	position:absolute;
+	content:"";
+	after:"&nbsp;";
+	top:0.75em;
+	left:0;
+	list-style:none;
+	height:16px;
+	width:16px;
+} 
+
+.field-name-field-aside .field-item h2, .field-name-field-aside .field-item h3{
+	font-size:1.333em; /*16px*/
+	line-height:20px;
+	margin-bottom:.5em;
+}
+.field-name-field-aside .field-item h2,.field-name-field-aside .field-item h3{
+	color:#900900;
+}
+.field-name-field-aside .field-item h4, .field-name-field-aside .field-item h5{
+	font-size:14px;
+	line-height:18px;
+	margin-bottom:0.2em;
+}
+
+
 /* ========== BLOCKQUOTES ========== */
 blockquote {
 	font-family: Georgia, "Times New Roman", Times, serif;
-	font-size: 16px;
+	font-size:1.333em; /*16px*/
 	border-left:4px solid #115482;
 	font-style: italic;
 	color: #303030;
@@ -309,7 +272,7 @@ blockquote {
 	margin-top:10px;
 	text-align:right;
 	font-style:italic;
-	font-size:12px;
+	font-size:1em; /*12px*/
 	color:#ff7706;
 }
 
@@ -317,35 +280,9 @@ blockquote {
 	font-family:Georgia, "Times New Roman", Times, serif;
 	color:#303030;
 	font-style:italic;
-	font-size:16px;
+	font-size:1.333em; /*16px*/
 	font-weight:normal;
 	line-height:1.4em;
-}
-
-/* ========== BIO STYLES ========== */
-#bio {
-	background:url("/sites/all/themes/lynchburg/images/bg_bio.png") repeat-x left top #f0f0f0;
-	min-height:120px;
-	margin-top:3.4em;
-	padding:14px 20px;
-	border:1px solid #d4d4d4;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	-moz-box-shadow: 1px 2px 3px rgba(228,228,228,0.8);
-	-webkit-box-shadow: 1px 2px 3px rgba(228,228,228,0.8);
-	box-shadow: 1px 2px 3px rgba(228,228,228,0.8);
-	position:relative;
-	behavior: url(js/PIE.htc);
-}
-.bio_info {
-	overflow:hidden;
-	display:table;
-}
-#bio h5 {
-	text-shadow:#fafafa 1px 1px 0;
-	margin-bottom:1em;
-	color:#858585;
 }
 
 
@@ -405,7 +342,7 @@ blockquote {
 .caption .caption-date,
 .caption .caption-author,
 .caption .caption-tags {
-	font-size:11px;
+	font-size:0.917em; /*11px*/
 	float:left;
 	font-style:italic;
 }
@@ -489,7 +426,7 @@ blockquote {
 .dropcap {
 	color: #5e5e5e;
 	float: left;
-	font-size: 40px;
+	font-size:3.333em; /*40px*/
 	line-height: 1em;
 	margin: 0 10px 0 0;
 	padding: 3px 0;
@@ -499,7 +436,7 @@ blockquote {
 	color: #f0f0f0;
 	float: left;
 	text-shadow: none;
-	font-size: 45px;
+	font-size: 3.75em;/*45px*/
 	line-height: 1em;
 	margin: 0 10px 0 0;
 	padding: 10px 15px;
@@ -510,7 +447,7 @@ blockquote {
 	color: #bfbfbf;
 	float: left;
 	clear:both;
-	font-size: 50px;
+	font-size:4.167em;/*50px*/
 	line-height: 1em;
 	margin: 0 10px 0 0;
 	padding: 8px 15px 7px;
@@ -521,7 +458,7 @@ blockquote {
 	color: #FFFEFE;
 	display: block;
 	float: left;
-	font-size: 24px;
+	font-size:2em;/*24px*/
 	height: 62px;
 	line-height: 62px;
 	padding-right: 8px;
@@ -539,7 +476,7 @@ blockquote {
 	color: #FFFEFE;
 	display: block;
 	float: left;
-	font-size: 18px;
+	font-size:1.5em;/*18px*/
 	height: 40px;
 	line-height: 38px;
 	margin-top:5px;
@@ -563,7 +500,7 @@ blockquote {
 	clear: both;
 	position:relative;
 	display: block;
-	font-size:10px;
+	font-size:0.833em;/*10px*/
 	padding: 20px 0;
 	width: 100%;
 }
@@ -602,6 +539,33 @@ blockquote {
 	width: 100%;
 }
 
+
+
+/* ========== BIO STYLES ========== */
+#bio {
+	background:url("/sites/all/themes/lynchburg/images/bg_bio.png") repeat-x left top #f0f0f0;
+	min-height:120px;
+	margin-top:3.4em;
+	padding:14px 20px;
+	border:1px solid #d4d4d4;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border-radius:5px;
+	-moz-box-shadow: 1px 2px 3px rgba(228,228,228,0.8);
+	-webkit-box-shadow: 1px 2px 3px rgba(228,228,228,0.8);
+	box-shadow: 1px 2px 3px rgba(228,228,228,0.8);
+	position:relative;
+	behavior: url(js/PIE.htc);
+}
+.bio_info {
+	overflow:hidden;
+	display:table;
+}
+#bio h5 {
+	text-shadow:#fafafa 1px 1px 0;
+	margin-bottom:1em;
+	color:#858585;
+}
 
 
 /* ========== FEATURE TABLES ========== */
@@ -644,7 +608,7 @@ table.feature_table thead tr th.right_round {
 .feature_table thead tr th {
 	font-family:Arial, Verdana;
 	padding:14px 20px 12px 20px;
-	font-size:16px;
+	font-size:1.333em;/*16px*/
 	position:relative;
 	font-weight:100;
 	text-align:left;
@@ -655,7 +619,7 @@ table.feature_table thead tr th.right_round {
 table.feature_table tbody td {
 	margin:0;
 	padding:10px 20px;
-	font-size:12px;
+	font-size:1em;/*12px*/
 	color:#6b6b6b;
 	border-top:1px solid #f0f0f0;
 	border-right:1px solid #f0f0f0;
@@ -687,7 +651,7 @@ table.feature_table.table_grey thead tr th.right_round {
 /* --- Table Dark --- */
 table.feature_table.table_dark thead th {
 	background-position: 0 -45px;
-	font-size:16px;
+	font-size:1.333em;/*16px*/
 	border-right:1px solid #595a5a;
 	text-shadow:0 -1px #2a2b2b;
 	color:#fff;
@@ -701,7 +665,7 @@ table.feature_table.table_dark thead tr th.right_round {
 /* --- Table blue --- */
 table.feature_table.table_blue thead th {
 	background-position: 0 -181px;
-	font-size:16px;
+	font-size:1.333em;/*16px*/
 	border-right:1px solid #1369a4;
 	text-shadow:1px 1px #104468;
 	color:#fff;
@@ -715,7 +679,7 @@ table.feature_table.table_blue thead tr th.right_round {
 /* --- Table Red --- */ 
 table.feature_table.table_red thead th {
 	background-position: 0 -226px;
-	font-size:16px;
+	font-size:1.333em;/*16px*/
 	border-right:1px solid #6d0903;
 	text-shadow:1px 1px #484848;
 	color:#fff;
@@ -742,7 +706,7 @@ table.feature_table.table_red thead tr th.right_round {
 .emphasis_box .emphasis-date,
 .emphasis_box .emphasis-author,
 .emphasis_box .emphasis-tags {
-	font-size:11px;
+	font-size:0.917em;/*11px*/
 	float:left;
 	font-style:italic;
 }
@@ -776,7 +740,7 @@ table.feature_table.table_red thead tr th.right_round {
 /* ----- Default Form Elements ----- */
 
 input, select, textarea {
-	font-size:12px;
+	font-size:1em;
 	font-family:Arial, Helvetica, sans-serif;
 	color:#6b6b6b;
 	font-weight:normal;
@@ -811,7 +775,7 @@ select {
 /* ========== NOTIFICATIONS ========== */
 .info, .warnings, .errors, .success {
 	border:1px solid #d7d7d7;
-	font-size:12px;
+	font-size:1em;
 	margin-bottom:10px;
 	padding:20px 60px 20px 20px;
 	-moz-border-radius:5px;
@@ -921,17 +885,17 @@ select {
 } 
 
 .small {
-    font-size: 12px;
+    font-size:1em;
     padding: 0.7em 1.5em 0.6em;
 }
 
 .medium {
-    font-size: 16px;
+    font-size:1.333em;
     padding: 0.8em 1.4em 0.7em;
 }
 
 .large {
-    font-size: 18px;
+    font-size:1.5em;
     padding: 0.8em 1.4em 0.7em;
 }
 
@@ -1024,6 +988,9 @@ select {
 .light:hover { background: #a0b4b9;}
 .red:hover { background: #cb6868;}
 .blue:hover { background: #589dc9;}
+
+
+
 /* ----- Pagination ----- */
 .wp-pagenavi {
 	margin-top:30px;
@@ -1103,7 +1070,7 @@ select {
 }
 
 .wp-pagenavi span.current	{ 
-	font-size:12px;
+	font-size:1em;
 	color:#636363;
 	text-shadow:#fdfdfd 1px 1px 0;
 	background:url(../images/bg_pagenavi.png) repeat-x 0 -23px;
@@ -1118,7 +1085,7 @@ select {
 .wp-pagenavi a.last,
 .wp-pagenavi a.previouspostslink,
 .wp-pagenavi a.nextpostslink {
-	font-size:12px;
+	font-size:1em;
 	color:#636363;
 	text-shadow:#fdfdfd 1px 1px 0;
 	background:url(../images/bg_pagenavi.png) repeat-x 0 0;
@@ -1154,7 +1121,7 @@ footer#section-footer h1, footer#section-footer h2, footer#section-footer h3, fo
 footer#section-footer h2 {
 	border-bottom:solid 1px #5b5b5b;
 	font-family:arial, sans-serif;
-	font-size:16px;
+	font-size:1.333em;
 	font-weight:normal;
 	margin-top:20px;
 }
@@ -1163,7 +1130,6 @@ footer#section-footer ul li{
 	list-style:none;
 	/*border:#0F0 solid 1px;*/
 }
-	
 
 .grid12 {
 	width:960px;
