--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -16,7 +16,6 @@ body {
 	background: #f9f9f9 url("/sites/all/themes/lynchburg/images/bg-body-top.jpg") repeat-x top left;
 }
 
-
 /* ========== LIST STYLES ========== */
 ol, ul {
 	list-style: none;
@@ -113,7 +112,7 @@ h1, h2, h3, h4, h5, h6 {
 	margin-bottom:0.3em;
 	letter-spacing:.5px;
 }
-h1 {
+h1.page-title {
 	font-size:2.5em; /*30px*/
 	margin-bottom: 1em;
 	line-height:32px;
@@ -138,16 +137,23 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	color:#454545;
 }
 
-#megamenu-undergraduate, #megamenu-graduate,#megamenu-studentlife, #megamenu-alumni, #megamenu-athletics{padding:0px 30px 0 10px;}
-#megamenu-studentlife {padding-right:515px;}
+#megamenu-undergraduate, #megamenu-graduate,#megamenu-studentlife, #megamenu-alumni, #megamenu-athletics{padding:0px 40px 0 0; margin-left:0;}
+#megamenu-studentlife {margin-right:350px;}
+#megamenu-apply{
+}
+main-mune.#megamenu-visit {
+background:url("/sites/all/themes/lynchburg/images/visitHover.png");
+background-repeat:no-repeat;
+	/*background-position:0 -30px;*/
+}
 
 /* ========== MAIN NAV DROPDOWN ========== */
 .qtip{border:none;}
 
 .qtip-wrapper{
-	-moz-box-shadow: 3px 3px 8px #dddedf;
-	-webkit-box-shadow: 3px 3px 8px #dddedf;
-	box-shadow: 3px 3px 8px #dddedf;
+	-moz-box-shadow: 3px 3px 6px #dddedf;
+	-webkit-box-shadow: 3px 3px 6px #dddedf;
+	box-shadow: 3px 3px 6px #dddedf;
 	/* For IE 8 */
 	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#dddedf')";
 	/* For IE 5.5 - 7 */
@@ -157,9 +163,9 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	-moz-border-radius-bottomleft:8px;
 	-webkit-border-bottom-left-radius:8px;
 }
-.qtip-wrapper.qtip-contentWrapper{
-	border:none;
-}
+/*.qtip-wrapper.qtip-contentWrapper{
+	border:#dddedf solid 3px;
+}*/
 
 #mini-panel-undergraduate_megamenu, #mini-panel-graduate_megamenu, #mini-panel-student_life_megamenu, 
 #mini-panel-alumni_megamenu, #mini-panel-athletics_megamenu{
@@ -200,7 +206,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	font-size:1.333em; /*16px*/
 	background:none;
 	line-height:1.2em;
-	margin-bottom:1em;
+	margin-bottom:0.02em;
 	color:#242424
 }
 
@@ -247,7 +253,6 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	line-height:18px;
 	margin-bottom:0.2em;
 }
-
 
 /* ========== BLOCKQUOTES ========== */
 blockquote {
@@ -569,7 +574,7 @@ blockquote {
 
 
 /* ========== FEATURE TABLES ========== */
-.feature_table {
+table, table.feature_table {
 	background:#fff;
 	margin:0 0 20px 0;
 	width:100%;
