--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -10,7 +10,7 @@ header#section-header {
 	height:142px;
 	margin:0;
 	padding:0;
-	background: transparent url("/sites/all/themes/lynchburg/images/bg-header-arch.jpg") no-repeat top center;
+	background: transparent url("/sites/all/themes/lynchburg/images/bg-header-arch1.jpg") no-repeat top center;
 }
 
 
@@ -46,44 +46,44 @@ div#region-menu {
 /* footer region */
 /*****************/
 
-footer#section-footer {
-	background:#202022  url("/sites/all/themes/lynchburg/images/bg-footer-first1.jpg") repeat-x top left;
-}
-footer#section-footer a {
-	color:#acacac;
+
+/*footer#section-footer a {
+	color:#b9b9b9;
 	text-decoration:none;
 }
 footer#section-footer a:hover {
 	color:#fff;
 	text-decoration:underline;
 }
-
+*/
 #region-footer-first, #region-footer-first div.content {
 	background:transparent;
 	height:60px;
 }
-.footer-bar-link {
+
+/*.footer-bar-link {
 	display:inline-block;
+	border: #3F0 solid 1px;
 }
 .footer-bar-link a {
 	display:inline-block;
 	margin:20px ;
-}
-.give {
+}*/
+/*.give {
 	height:60px; width: 70px; 
 	background: transparent url("/sites/all/themes/lynchburg/images/bg-give.png") no-repeat center;
 	
 }
 .give:hover {	
 	background: transparent url("/sites/all/themes/lynchburg/images/bg-give-hover.png") no-repeat center;
-}
-footer#section-footer span.give a {
+}*/
+/*footer#section-footer span.give a {
 	color:#fff;
 }
 footer#section-footer span.give:hover a {
 	color:#000;
 }
-
+*/
 
 #region-footer-second {
 	clear:both;
