--- a/www/sites/all/modules/contrib/media/css/media.css
+++ b/www/sites/all/modules/contrib/media/css/media.css
@@ -173,23 +173,13 @@
   overflow: hidden;
 }
 
-.view-content #media-browser-library-list {
-  margin: 0;
-}
-
-.media-list-thumbnails{
-  overflow: hidden;
-  width: 100%;
+.media-display-thumbnails .media-list-thumbnails {
+  margin: 0 -10px;
 }
 
 .media-list-thumbnails > li {
   float: left;
   list-style: none;
-}
-
-.media-list-thumbnails .media-item {
-  margin-left: 0;
-  margin-top: 0;
 }
 
 .media-list-thumbnails .form-type-checkbox {
@@ -332,6 +322,10 @@ a.button {
 
 .media-clear {
   clear: both;
+}
+
+.media-thumbnails-select {
+  float: left;
 }
 
 #edit-options .form-item-format label {
